trying to fix the 2 errors, buttons not align and links arent white

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ nav ul{
     display: flex;
     justify-content: right;
     list-style: none;
+    
 }
 
 nav ul li a:link {
@@ -135,7 +136,7 @@ img{
 }
 
 /* not working */
-div .btn{
+.wrapper .btn{
     display: flex;
     align-items: baseline;
     justify-content: left;
